# Multi-Agent-Podcast-Generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  audio_pipeline.py  config.toml  docker-compose.yaml  orchestrator.py  pyproject.toml  rag_mcp_server.py  requirements.txt  research_tools.py
.github/workflows/: deploy-hf.yml
knowledge/: .gitkeep
slides/: presentation.tex
