[project]
name = "multi-agent-podcast-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.12.2",
    "edge-tts>=7.0.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.55.0",
]
